--- a/news-homepage-main/css/style.css
+++ b/news-homepage-main/css/style.css
@@ -1,65 +1,260 @@
-:root{
-   
---Softorange:hsl(35, 77%, 62%);
---Softred: hsl(5, 85%, 63%);
---Off-white:hsl(36, 100%, 99%);
---Grayish-blue: hsl(233, 8%, 79%);
---Dark-grayish-blue: hsl(236, 13%, 42%);
---Very-dark-blue: hsl(240, 100%, 5%);
---ff-main:'Inter',sans-serif;
+:root {
+
+    --Softorange: hsl(35, 77%, 62%);
+    --Softred: hsl(5, 85%, 63%);
+    --Off-white: hsl(36, 100%, 99%);
+    --Grayish-blue: hsl(233, 8%, 79%);
+    --Dark-grayish-blue: hsl(236, 13%, 42%);
+    --Very-dark-blue: hsl(240, 100%, 5%);
+    --ff-main: 'Inter', sans-serif;
 
 }
-*,*::before,*::after{
+
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
-body{
+
+body {
     margin: 0;
     min-width: 100vh;
     font-family: var(--ff-main);
 }
-img{
+
+img {
     max-width: 100%;
 }
-ul{
+
+ul {
     list-style: none;
 }
 
 /* header css start */
-header{
+header {
     padding: 55px 103px 30px 103px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-header .logo{
-    outline: 1px solid #111;
-}
+
 header .logo img {
     width: 65px;
     height: 42px;
     /* height: 65px; */
 }
-nav{
+
+nav {
     /* background-color: yellow; */
 }
 
-nav  ul{
+nav ul {
     display: flex;
-    gap:2rem;
+    gap: 2.5rem;
 }
-nav a{
+
+nav a {
     text-decoration: none;
     font-size: 1.125rem;
     color: var(--Dark-grayish-blue);
 }
 
 /* section -1 css  */
-.section-1{
+.section-1 {
     padding: 35px 103px 30px 103px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-.section-2{
+.section-1 .sec-1 {
+    grid-column: 1/3;
+}
 
+.side-bar {
+    grid-column: 3/4;
+    background-color: var(--Very-dark-blue);
+    margin-left: 1.9em;
+    color: #fff;
+    padding: 0.75em 1.7em;
+}
+
+.side-bar h2 {
+    font-size: 3rem;
+    color: var(--Softorange);
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+}
+
+.side-bar h3 {
+    font-size: 1.3rem;
+    margin-bottom: 0.5em;
+}
+
+.side-bar div {
+    margin-top: 1em;
+    /* background-color: pink; */
+    padding-bottom: 1em;
+
+}
+
+.side-bar p {
+    font-size: 1rem;
+    line-height: 1.6;
+    margin-bottom: 0;
+    padding-right: 1.5em;
+    color: var(--Grayish-blue);
+    font-weight: 300;
+}
+
+.side-bar div:nth-of-type(1),
+.side-bar div:nth-of-type(2) {
+    border-bottom: 1px solid var(--Dark-grayish-blue);
+    padding-bottom: 2em;
+}
+
+.sec-1-row {
+    display: grid;
+    /* grid-template-columns: repeat(auto-fit,minmax(100px,20rem)); */
+    grid-template-columns: 1fr 1fr;
+    padding-top: 1em;
+
+}
+
+.sec-1-row h1 {
+    margin: 0;
+    font-size: 3.8rem;
+    line-height: 1;
+}
+
+.sec-1-row p {
+    line-height: 1.4;
+    font-size: 1.1rem;
+    color: var(--Dark-grayish-blue);
+}
+
+.btn {
+    display: inline-block;
+    background-color: var(--Softred);
+    color: #fff;
+    padding: 1.1em 3em;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 4px;
+    font-size: 0.9rem;
+    font-weight: 600;
+    margin-top: 1em;
+}
+
+.section-2 {
+    display: grid;
+    padding: 35px 103px 30px 103px;
+    grid-template-columns: 1fr 1fr 1fr
+}
+
+.section-2 .card {
+    display: grid;
+    grid-template-columns: 100px 1fr 1fr;
+    gap: 1.2em;
+    max-width: 400px;
+}
+
+.section-2 .card-body {
+    grid-column: 2/4;
+}
+
+.section-2 .card:last-child {
+    padding-left: 2em;
+}
+
+.section-2 .card h3 {
+    font-size: 2.3rem;
+    margin: 0;
+    color: var(--Dark-grayish-blue);
+}
+
+/* .section-2 .card img{
+    align-self: stretch;
+} */
+.section-2 .card h4 {
+    font-size: 1.1rem;
+    margin-top: 0.2em;
+    margin-bottom: 0;
+}
+
+.section-2 .card p {
+    margin-bottom: 0;
+    margin-top: 0.5em;
+    line-height: 1.5;
+    color: var(--Dark-grayish-blue);
+    /* padding-right: 1.7em; */
+    font-weight: 500;
+    font-size: 0.9rem;
+}
+
+/* .section-2 .card:first-child,.section-2 .card:nth-child(2){
+    padding-right: 1.5em;
+} */
+
+/*  media queries */
+@media (min-width: 992px) and (max-width: 1199px) {
+
+
+    .section-2,
+    .section-1,
+    header {
+        padding: 35px 50px;
+    }
+
+    .sec-1-row h1 {
+        font-size: 3rem;
+    }
+
+    .section-2 .card h4 {
+        font-size: 1rem;
+    }
+
+    .section-2 .card p {
+        font-size: 0.8rem;
+    }
+
+    .section-2 {
+        gap: 1em;
+    }
+
+    .section-2 .card img {
+        align-self: stretch;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+
+    .section-2,
+    .section-1,
+    header {
+        padding: 35px 20px;
+    }
+
+    .logo {
+        flex-grow: 1;
+    }
+
+    header nav {
+        width: 100%;
+    }
+
+    .section-1 .col {
+        grid-row: 2;
+        grid-column: span 2;
+    }
+
+    .sec-1-row h1 {
+        grid-column: span 2;
+    }
+    .section-2 {
+        grid-template-columns: 1fr 1fr;
+        grid-row-gap: 1em;
+    }
+    .section-2 .card:last-child{
+        padding-left: 0;
+    }
 }
