--- a/news-homepage-main/css/style.css
+++ b/news-homepage-main/css/style.css
@@ -74,12 +74,12 @@ header .logo img {
 
 nav ul {
     display: flex;
-    gap: 2rem;
+    gap: 2.6rem;
 }
 
 nav a {
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 0.9rem;
     color: var(--Dark-grayish-blue);
     transition: all 250ms ease-in;
 
@@ -98,12 +98,13 @@ nav a:hover{
 
 .section-1 .sec-1 {
     grid-column: 1/3;
+    /* align-self: flex-end; */
+    margin-right: 2em;
 }
 
 .side-bar {
     grid-column: 3/4;
     background-color: var(--Very-dark-blue);
-    margin-left: 1.9em;
     color: #fff;
     padding: 1em 1.2em 0.75em 1.2em;
     /* align-self: flex-start; */
@@ -242,7 +243,7 @@ nav a:hover{
     line-height: 1.5;
     color: var(--Dark-grayish-blue);
     font-weight: 500;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
 }
 /*---------------------------- section -2 end-------------------------------  */
 
@@ -408,5 +409,12 @@ nav a:hover{
     }
     .section-2 .card:first-child p, .section-2 .card:nth-child(2) p{
        padding-right: 3em;
+    }
+    header,.section-2, .section-1{
+        padding-left: 220px;
+    }
+
+    .section-2 .card:last-child{
+        padding-left: 0;
     }
 }
