--- a/news-homepage-main/css/style.css
+++ b/news-homepage-main/css/style.css
@@ -35,7 +35,7 @@ ul {
 
 /*--------------------------- header css start -----------------------------*/
 header {
-    padding: 80px 163px 30px 163px;
+    padding: 75px 163px 30px 163px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -99,7 +99,7 @@ nav a:hover{
 .section-1 .sec-1 {
     grid-column: 1/3;
     /* align-self: flex-end; */
-    margin-right: 2em;
+    margin-right: 2.2em;
 }
 
 .side-bar {
@@ -171,7 +171,7 @@ nav a:hover{
     font-size: 0.8rem;
     color: var(--Dark-grayish-blue);
     margin-top: 0;
-    padding-right: 3.9em;
+    padding-right: 1em;
 }
 
 .btn {
@@ -222,7 +222,7 @@ nav a:hover{
 
 
 .section-2 .card h4 {
-    font-size: 1.1rem;
+    font-size: 1rem;
     margin-top: 0.2em; 
     margin-bottom: 0;
     white-space: nowrap;
@@ -411,10 +411,16 @@ nav a:hover{
        padding-right: 3em;
     }
     header,.section-2, .section-1{
-        padding-left: 220px;
+        padding-left: 230px;
     }
 
     .section-2 .card:last-child{
         padding-left: 0;
+    }
+    .section-2 .card:nth-of-type(2){
+        padding-left: 0.8em;
+    }
+    .section-1 .sec-1-row{
+        padding-left: 2.5em;
     }
 }
