--- a/news-homepage-main/css/style.css
+++ b/news-homepage-main/css/style.css
@@ -421,6 +421,6 @@ nav a:hover{
         padding-left: 0.8em;
     }
     .section-1 .sec-1-row{
-        padding-left: 2.5em;
+        padding-top: 2.5em;
     }
 }
