--- a/news-homepage-main/css/style.css
+++ b/news-homepage-main/css/style.css
@@ -74,7 +74,7 @@ header .logo img {
 
 nav ul {
     display: flex;
-    gap: 2.6rem;
+    gap: 2.7rem;
 }
 
 nav a {
@@ -98,8 +98,7 @@ nav a:hover{
 
 .section-1 .sec-1 {
     grid-column: 1/3;
-    /* align-self: flex-end; */
-    margin-right: 2.2em;
+    margin-right: 1.5em;
 }
 
 .side-bar {
@@ -141,13 +140,13 @@ nav a:hover{
     margin-bottom: 0;
     color: var(--Grayish-blue);
     font-weight: 300;
-    padding-right: 4em;
+    padding-right: 3em;
 }
 
 .side-bar div:nth-of-type(1),
 .side-bar div:nth-of-type(2) {
     border-bottom: 1px solid var(--Dark-grayish-blue);
-    padding-bottom: 2em;
+    padding-bottom: 1.4em;
 }
 
 .sec-1-row {
@@ -408,10 +407,11 @@ nav a:hover{
         line-height: 1.7;
     }
     .section-2 .card:first-child p, .section-2 .card:nth-child(2) p{
-       padding-right: 3em;
+       padding-right: 1em;
     }
     header,.section-2, .section-1{
-        padding-left: 230px;
+        padding-left: 235px;
+        padding-right: 235px;
     }
 
     .section-2 .card:last-child{
@@ -422,5 +422,8 @@ nav a:hover{
     }
     .section-1 .sec-1-row{
         padding-top: 2.5em;
+    }
+    nav a{
+        font-size: 0.8rem;
     }
 }
