--- a/news-homepage-main/css/style.css
+++ b/news-homepage-main/css/style.css
@@ -75,6 +75,7 @@ header .logo img {
 nav ul {
     display: flex;
     gap: 2.7rem;
+    margin: 0;
 }
 
 nav a {
@@ -91,14 +92,14 @@ nav a:hover{
 
 /*---------------------------- section -1 css-------------------------------  */
 .section-1 {
-    padding: 0px 163px 30px 163px;
+    padding: 5px 163px 30px 163px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
 .section-1 .sec-1 {
     grid-column: 1/3;
-    margin-right: 1.5em;
+    margin-right: 1em;
 }
 
 .side-bar {
@@ -106,7 +107,7 @@ nav a:hover{
     background-color: var(--Very-dark-blue);
     color: #fff;
     padding: 1em 1.2em 0.75em 1.2em;
-    /* align-self: flex-start; */
+    margin-left: 0.5em;
 }
 
 .side-bar h2 {
@@ -193,6 +194,7 @@ nav a:hover{
 
 /*---------------------------- section -2 css start-------------------------------  */
 .section-2 {
+    padding-top: 1em;
     display: grid;
     padding:0px 163px 74px 163px;
     grid-template-columns: 1fr 1fr 1fr
@@ -415,7 +417,7 @@ nav a:hover{
     }
 
     .section-2 .card:last-child{
-        padding-left: 0;
+        padding-left: 0.5em;
     }
     .section-2 .card:nth-of-type(2){
         padding-left: 0.8em;
